# 02_extract_class

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
docs/source/usermanual/: authors.md  installation.md  quickstart.md
src/reporting/: models.py
tests/: test_studentreport.py
